JBTM-1490. JBossWS version and dependencies update

--- a/XTS/localjunit/pom.xml
+++ b/XTS/localjunit/pom.xml
@@ -63,6 +63,16 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.jboss.spec.javax.ejb</groupId>
+            <artifactId>jboss-ejb-api_3.1_spec</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.ws</groupId>
+            <artifactId>jbossws-api</artifactId>
+            <scope>provided</scope>            
+        </dependency>
+        <dependency>
             <groupId>org.jboss.narayana.xts</groupId>
             <artifactId>jbossxts</artifactId>
             <scope>provided</scope>
