--- a/pom.xml
+++ b/pom.xml
@@ -693,7 +693,7 @@
         <dependency>
             <groupId>org.jboss.ws</groupId>
             <artifactId>jbossws-api</artifactId>
-            <version>1.0.0.GA</version>
+            <version>1.0.2.Alpha1</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate.javax.persistence</groupId>
