--- a/ArjunaJTS/jtax/build.xml
+++ b/ArjunaJTS/jtax/build.xml
@@ -205,6 +205,7 @@
                     <fileset dir="${com.hp.mwlabs.ts.jtax.tests.src}">
                         <include  name="**/LastResource*TestCase.java"/>
                         <include  name="**/SubordinateTestCase.java"/>
+                        <include  name="**/WedgedResourceDemonstrator.java"/>
                     </fileset>
 	        </batchtest>
 	    </junit>
