--- a/XTS/localjunit/unit/pom.xml
+++ b/XTS/localjunit/unit/pom.xml
@@ -1,27 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- JBoss, Home of Professional Open Source Copyright 2008, Red Hat Middleware LLC, and others contributors as indicated by the @authors tag. All rights reserved. See the copyright.txt in the distribution 
-	for a full listing of individual contributors. This copyrighted material is made available to anyone wishing to use, modify, copy, or redistribute it subject to the terms and conditions of the GNU Lesser 
-	General Public License, v. 2.1. This program is distributed in the hope that it will be useful, but WITHOUT A WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR 
-	PURPOSE. See the GNU Lesser General Public License for more details. You should have received a copy of the GNU Lesser General Public License, v.2.1 along with this distribution; if not, write to the Free 
-	Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<parent>
-		<groupId>org.jboss.narayana.xts</groupId>
-		<artifactId>localjunit</artifactId>
-		<version>5.0.0.M2-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
-	</parent>
-	<modelVersion>4.0.0</modelVersion>
-	<artifactId>localjunit-unit-tests</artifactId>
-	<packaging>jar</packaging>
-	<name>unit tests</name>
-	<description>unit tests</description>
-    
+<!-- JBoss, Home of Professional Open Source Copyright 2008, Red Hat Middleware 
+    LLC, and others contributors as indicated by the @authors tag. All rights 
+    reserved. See the copyright.txt in the distribution for a full listing of 
+    individual contributors. This copyrighted material is made available to anyone 
+    wishing to use, modify, copy, or redistribute it subject to the terms and 
+    conditions of the GNU Lesser General Public License, v. 2.1. This program 
+    is distributed in the hope that it will be useful, but WITHOUT A WARRANTY; 
+    without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR 
+    PURPOSE. See the GNU Lesser General Public License for more details. You 
+    should have received a copy of the GNU Lesser General Public License, v.2.1 
+    along with this distribution; if not, write to the Free Software Foundation, 
+    Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA. -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <parent>
+        <groupId>org.jboss.narayana.xts</groupId>
+        <artifactId>localjunit</artifactId>
+        <version>5.0.0.M2-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>localjunit-unit-tests</artifactId>
+    <packaging>jar</packaging>
+    <name>unit tests</name>
+    <description>unit tests</description>
+
     <properties>
         <skipEnabledPropagationTests>false</skipEnabledPropagationTests>
         <skipDisabledPropagationTests>false</skipDisabledPropagationTests>
     </properties>
-    
+
     <build>
         <plugins>
             <plugin>
@@ -30,7 +38,6 @@
                     <execution>
                         <id>default-test</id>
                         <configuration>
-                            <skip>${skipEnabledPropagationTests}</skip>
                             <excludes>
                                 <exclude>**/DisabledContextPropagationTest.java</exclude>
                             </excludes>
@@ -43,7 +50,6 @@
                             <goal>test</goal>
                         </goals>
                         <configuration>
-                            <skip>${skipDisabledPropagationTests}</skip>
                             <systemProperties>
                                 <arquillian.launch>jboss-as-disabled-context-propagation</arquillian.launch>
                             </systemProperties>
@@ -102,4 +108,84 @@
             </plugin>
         </plugins>
     </build>
+    <profiles>
+        <profile>
+            <id>arq-remote</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>default-test</id>
+                                <configuration>
+                                    <skip>${skipEnabledPropagationTests}</skip>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>disabled-context-propagation-test</id>
+                                <configuration>
+                                    <skip>${skipDisabledPropagationTests}</skip>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>arq</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>default-test</id>
+                                <configuration>
+                                    <skip>${skipEnabledPropagationTests}</skip>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>disabled-context-propagation-test</id>
+                                <configuration>
+                                    <skip>${skipDisabledPropagationTests}</skip>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>arqIPv6</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>default-test</id>
+                                <configuration>
+                                    <skip>${skipEnabledPropagationTests}</skip>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>disabled-context-propagation-test</id>
+                                <configuration>
+                                    <skip>${skipDisabledPropagationTests}</skip>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
