https://issues.jboss.org/browse/JBTM-1511
Added configuration option to enable/disable the optimsation. QA
disables it so existing tests can run.

--- a/qa/TaskImpl.properties
+++ b/qa/TaskImpl.properties
@@ -81,6 +81,10 @@ COMMAND_LINE_13=-DCoordinatorEnvironmentBean.defaultTimeout=120
 #COMMAND_LINE_14=-Xdebug
 #COMMAND_LINE_15=-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5006
 
+# Disable dynamic 1PC optimisation.
+# Remove this line if we want to test this in QA, or enable on a per case basis.
+
+COMMAND_LINE_16=-DCoordinatorEnvironmentBean.dynamic1PC=false
 #
 # task arg properties substitutions - you probably don't need to mess with these.
 # Read TaskImpl to understand how they work if you do.
