JBTM-1511 made the COMMAND_LINE_ options consequetively numbered

--- a/qa/TaskImpl.properties
+++ b/qa/TaskImpl.properties
@@ -73,18 +73,18 @@ COMMAND_LINE_12=-DCoreEnvironmentBean.timeoutFactor=1
 # change the default transaction timeout. If runing via narayana.sh and the env variable MFACTOR is set
 # then defaultTimeout is set to $MFACTOR * 120
 COMMAND_LINE_13=-DCoordinatorEnvironmentBean.defaultTimeout=120
+# Disable dynamic 1PC optimisation.
+# Remove this line if we want to test this in QA, or enable on a per case basis.
+COMMAND_LINE_14=-DCoordinatorEnvironmentBean.dynamic1PC=false
+
 #
 # enable these to debug spawned processes. You may need to pause the test
 # framework in a debugger too, or it may spawn multiple procs on the same
 # debug port.
 #
-#COMMAND_LINE_14=-Xdebug
-#COMMAND_LINE_15=-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5006
+#COMMAND_LINE_(CURRENTMAX+1)=-Xdebug
+#COMMAND_LINE_(NEWMAX+1)=-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5006
 
-# Disable dynamic 1PC optimisation.
-# Remove this line if we want to test this in QA, or enable on a per case basis.
-
-COMMAND_LINE_16=-DCoordinatorEnvironmentBean.dynamic1PC=false
 #
 # task arg properties substitutions - you probably don't need to mess with these.
 # Read TaskImpl to understand how they work if you do.
