--- a/XTS/localjunit/unit/pom.xml
+++ b/XTS/localjunit/unit/pom.xml
@@ -28,6 +28,7 @@
     <properties>
         <skipEnabledPropagationTests>false</skipEnabledPropagationTests>
         <skipDisabledPropagationTests>false</skipDisabledPropagationTests>
+        <version.plugin.antrun>1.7</version.plugin.antrun>
     </properties>
 
     <build>
@@ -63,29 +64,36 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
+                <version>${version.plugin.antrun}</version>
                 <executions>
                     <execution>
-                        <id>copy-configutation</id>
+                        <id>create-disabled-context-propagation-configuration</id>
                         <phase>process-test-sources</phase>
                         <configuration>
-                            <tasks>
+                            <skip>true</skip>
+                            <target unless="skipTests">
                                 <copy
-                                    file="src/test/resources/test-disabled-context-propagation-standalone-xts.xml"
+                                    file="${env.JBOSS_HOME}/standalone/configuration/standalone-xts.xml"
                                     tofile="${env.JBOSS_HOME}/standalone/configuration/test-disabled-context-propagation-standalone-xts.xml" />
-                            </tasks>
+                                <replaceregexp
+                                    match="&lt;default-context-propagation enabled=&quot;true&quot;/&gt;"
+                                    replace="&lt;default-context-propagation enabled=&quot;false&quot;/&gt;"
+                                    file="${env.JBOSS_HOME}/standalone/configuration/test-disabled-context-propagation-standalone-xts.xml" />
+                            </target>
                         </configuration>
                         <goals>
                             <goal>run</goal>
                         </goals>
                     </execution>
                     <execution>
-                        <id>delete-configutation</id>
+                        <id>delete-disabled-context-propagation-configuration</id>
                         <phase>test</phase>
                         <configuration>
-                            <tasks>
+                            <skip>true</skip>
+                            <target unless="skipTests">
                                 <delete
                                     file="${env.JBOSS_HOME}/standalone/configuration/test-disabled-context-propagation-standalone-xts.xml" />
-                            </tasks>
+                            </target>
                         </configuration>
                         <goals>
                             <goal>run</goal>
@@ -133,6 +141,24 @@
                             </execution>
                         </executions>
                     </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>create-disabled-context-propagation-configuration</id>
+                                <configuration>
+                                    <skip>${maven.test.skip}</skip>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>delete-disabled-context-propagation-configuration</id>
+                                <configuration>
+                                    <skip>${maven.test.skip}</skip>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
@@ -160,6 +186,24 @@
                             </execution>
                         </executions>
                     </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>create-disabled-context-propagation-configuration</id>
+                                <configuration>
+                                    <skip>${maven.test.skip}</skip>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>delete-disabled-context-propagation-configuration</id>
+                                <configuration>
+                                    <skip>${maven.test.skip}</skip>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
@@ -180,6 +224,24 @@
                                 <id>disabled-context-propagation-test</id>
                                 <configuration>
                                     <skip>${skipDisabledPropagationTests}</skip>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>create-disabled-context-propagation-configuration</id>
+                                <configuration>
+                                    <skip>${maven.test.skip}</skip>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>delete-disabled-context-propagation-configuration</id>
+                                <configuration>
+                                    <skip>${maven.test.skip}</skip>
                                 </configuration>
                             </execution>
                         </executions>
