--- a/txframework/pom.xml
+++ b/txframework/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jboss.narayana</groupId>
         <artifactId>narayana-all</artifactId>
-        <version>5.0.0.M2-SNAPSHOT</version>
+        <version>5.0.0.M2</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
