--- a/XTS/localjunit/xtstest/pom.xml
+++ b/XTS/localjunit/xtstest/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>org.jboss.narayana.xts</groupId>
         <artifactId>localjunit</artifactId>
-        <version>5.0.0.M2</version>
+        <version>5.0.0.M3-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
