--- a/pom.xml
+++ b/pom.xml
@@ -1040,10 +1040,12 @@
                         -javaagent:${project.build.directory}/lib/byteman.jar=listener:true
     </jvm.args.byteman>
     <jvm.args.memory>-Xms64m -Xmx1024m -XX:MaxPermSize=512m</jvm.args.memory>
-<!--
-    <jboss-as.version>7.1.2.Final-SNAPSHOT</jboss-as.version>
--->
-    <jboss-as.version>8.0.0.Alpha1-SNAPSHOT</jboss-as.version>
+
+    <!--
+        THIS MUST BE SET TO THE PREVIOUS RELEASE OTHERWISE WE GET A CYCLIC DEP
+    -->
+    <jboss-as.version>7.1.3.Final</jboss-as.version>
+
     <version.org.jboss.arquillian.core>1.0.0.Final</version.org.jboss.arquillian.core>
     <version.org.jboss.arquillian.osgi>1.0.2.Final</version.org.jboss.arquillian.osgi>
   </properties>
