JBTM-1540 TXFramework should be released to nexus

--- a/txframework/pom.xml
+++ b/txframework/pom.xml
@@ -23,6 +23,14 @@
     <build>
         <plugins>
             <plugin>
+              <inherited>false</inherited>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-deploy-plugin</artifactId>
+              <configuration>
+                <skip>false</skip>
+              </configuration>
+            </plugin>
+            <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <skip>true</skip>
