JBTM-1543 - XTS byteman_support should be released to nexus

--- a/XTS/byteman_support/pom.xml
+++ b/XTS/byteman_support/pom.xml
@@ -16,7 +16,18 @@
     <artifactId>byteman_support</artifactId>
     <packaging>jar</packaging>
     <name>Reusable Byteman rules for xts</name>
-    
+    <build>
+        <plugins>
+            <plugin>
+              <inherited>false</inherited>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-deploy-plugin</artifactId>
+              <configuration>
+                <skip>false</skip>
+              </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
         <dependency>
             <groupId>org.jboss.byteman</groupId>
