--- a/rest-tx/tx/pom.xml
+++ b/rest-tx/tx/pom.xml
@@ -194,6 +194,14 @@
   <build>
     <plugins>
       <plugin>
+        <inherited>false</inherited>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <configuration>
+          <skip>false</skip>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
@@ -248,4 +256,24 @@
       </plugin>
     </plugins>
   </build>
+  <profiles>
+    <profile>
+        <id>release</id>
+        <build>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-install-plugin</artifactId>
+                    <executions>
+                        <execution>
+                            <id>default-install</id>
+                            <phase>install</phase>
+                        </execution>
+                    </executions>
+                    <inherited>false</inherited>
+                </plugin>
+            </plugins>
+        </build>
+    </profile>
+  </profiles>
 </project>
