JBTM-1481 test fix - adding jbossts-properties.xml on classpath
git-svn-id: http://anonsvn.jboss.org/repos/labs/labs/jbosstm/branches/JBOSSTS_4_6_1_GA_CP@38307 c60d74c8-e8f6-0310-9e8f-d4a2fc68ab70

--- a/ArjunaJTS/jtax/build.xml
+++ b/ArjunaJTS/jtax/build.xml
@@ -198,7 +198,9 @@
 	            <path location="${com.hp.mwlabs.ts.jtax.dest}"/>
 	            <path refid="com.hp.mwlabs.ts.jacorb.classpath"/>
 	            <pathelement path="${build.classpath}"/>
-                <pathelement location="../../ArjunaJTA/jta/build/tests"/>
+                    <pathelement location="../../ArjunaJTA/jta/build/tests"/>
+                    <pathelement location="../../install/etc"/>
+                    <pathelement location="../../ArjunaJTS/jacorb/etc"/>
 	        </classpath>
 	        <batchtest haltonerror="yes" haltonfailure="yes" fork="yes"
                     todir="${com.hp.mwlabs.ts.jtax.reports.dest}">
