--- a/ArjunaJTS/integration/pom.xml
+++ b/ArjunaJTS/integration/pom.xml
@@ -147,6 +147,25 @@
   </dependencies>
   <profiles>
     <profile>
+      <id>JBTM-1298</id>
+	<activation>
+		<activeByDefault>true</activeByDefault>
+	</activation>
+        <build>
+      <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <excludes>
+            <exclude>**/SimpleIsolatedServers**</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
+      </plugins>
+        </build>
+    </profile>
+    <profile>
         <id>release</id>
         <build>
           <plugins>
