HornetQ object store testing option added to qa tests

--- a/qa/TaskImpl.properties
+++ b/qa/TaskImpl.properties
@@ -45,8 +45,7 @@ COMMAND_LINE_2=\
   ${path.separator}dbdrivers${file.separator}mysql-connector-java-5.1.8-bin.jar\
   ${path.separator}dbdrivers${file.separator}oracle_10_2_0_4${file.separator}ojdbc14.jar\
   ${path.separator}dbdrivers${file.separator}postgresql-8.3-605.jdbc4.jar\
-  ${path.separator}..${file.separator}build${file.separator}extlib${file.separator}emma.jar\
-  ${path.separator}..${file.separator}build${file.separator}extlib${file.separator}netty.jar
+  ${path.separator}ext${file.separator}netty.jar
 
 #
 # properties used by the tests or test framework:
@@ -84,6 +83,12 @@ COMMAND_LINE_14=-DCoordinatorEnvironmentBean.dynamic1PC=false
 #
 #COMMAND_LINE_(CURRENTMAX+1)=-Xdebug
 #COMMAND_LINE_(NEWMAX+1)=-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5006
+
+#
+# for tests run with profile hornetq enable this when you want to use AIO
+# put here path to directory where libHornetQAIO.so resides
+#COMMAND_LINE_(NEXTMAX+1)=-Djava.library.path=/path/to/dir/
+#
 
 #
 # task arg properties substitutions - you probably don't need to mess with these.
